@@ -1,5 +1,11 @@
 package it.polito.se2.g04.thesismanagement.application;
 
+import it.polito.se2.g04.thesismanagement.ExceptionsHandling.Exceptions.Application.ApplicationBadRequestFormatException;
+import it.polito.se2.g04.thesismanagement.ExceptionsHandling.Exceptions.Application.ApplicationDeletedException;
+import it.polito.se2.g04.thesismanagement.ExceptionsHandling.Exceptions.Application.DuplicateApplicationException;
+import it.polito.se2.g04.thesismanagement.ExceptionsHandling.Exceptions.Application.ProposalNotActiveException;
+import it.polito.se2.g04.thesismanagement.ExceptionsHandling.Exceptions.Proposal.ProposalNotFoundException;
+import it.polito.se2.g04.thesismanagement.ExceptionsHandling.Exceptions.Proposal.ProposalOwnershipException;
 import it.polito.se2.g04.thesismanagement.attachment.Attachment;
 import it.polito.se2.g04.thesismanagement.attachment.AttachmentRepository;
 import it.polito.se2.g04.thesismanagement.email.EmailService;
@@ -64,7 +70,7 @@ public class ApplicationServiceImpl implements ApplicationService {
             dto.setSupervisorSurname(it.getProposal().getSupervisor().getSurname());
             dto.setStatus(it.getStatus());
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
